[gd_scene load_steps=9 format=3 uid="uid://caf3yhbncyxwf"]

[ext_resource type="Script" path="res://assets/debug/scripts/debug_building.gd" id="1_xw6vb"]
[ext_resource type="LabelSettings" uid="uid://3rkfidxeoaqe" path="res://assets/fonts/h1_font.tres" id="2_gawm8"]
[ext_resource type="LabelSettings" uid="uid://bmxdt10e72a0o" path="res://assets/fonts/h2_font.tres" id="3_b3qlw"]
[ext_resource type="PackedScene" uid="uid://baj8jkegepq5f" path="res://assets/debug/scenes/debug_units_input.tscn" id="4_0gb48"]
[ext_resource type="Script" path="res://assets/debug/scripts/debug_section_combat.gd" id="6_1k06f"]
[ext_resource type="PackedScene" uid="uid://wld3cxit0cc" path="res://assets/debug/scenes/debug_action.tscn" id="6_ji11w"]

[sub_resource type="LabelSettings" id="LabelSettings_l6bgl"]
font_size = 18

[sub_resource type="LabelSettings" id="LabelSettings_r5jxv"]
font_size = 14

[node name="TabContainer" type="TabContainer"]
offset_right = 280.0
offset_bottom = 300.0

[node name="Well" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Well" type="VBoxContainer" parent="Well"]
layout_mode = 2
script = ExtResource("1_xw6vb")

[node name="PanelTitle" type="Label" parent="Well/Well"]
layout_mode = 2
text = "Well"
label_settings = ExtResource("2_gawm8")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Assigned" type="Label" parent="Well/Well"]
layout_mode = 2
text = "Assigned"
label_settings = ExtResource("3_b3qlw")

[node name="Units" parent="Well/Well" instance=ExtResource("4_0gb48")]
layout_mode = 2

[node name="Separator" type="Control" parent="Well/Well"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="RollButton" type="Button" parent="Well/Well"]
layout_mode = 2
text = "Roll"

[node name="HSeparator" type="HSeparator" parent="Well/Well"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="ResultsLabel" type="Label" parent="Well/Well"]
layout_mode = 2
text = "Results"
label_settings = ExtResource("3_b3qlw")

[node name="DiceContainer" type="HFlowContainer" parent="Well/Well"]
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10

[node name="HSeparator2" type="HSeparator" parent="Well/Well"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="ActionsLabel" type="Label" parent="Well/Well"]
layout_mode = 2
text = "Actions
"
label_settings = ExtResource("3_b3qlw")

[node name="ActionsContainer" type="HFlowContainer" parent="Well/Well"]
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
alignment = 1

[node name="Action2" parent="Well/Well/ActionsContainer" instance=ExtResource("6_ji11w")]
layout_mode = 2

[node name="North Wall" type="MarginContainer" parent="."]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Container" type="VBoxContainer" parent="North Wall"]
layout_mode = 2
script = ExtResource("6_1k06f")

[node name="PanelTitle" type="Label" parent="North Wall/Container"]
layout_mode = 2
text = "Combat"
label_settings = SubResource("LabelSettings_l6bgl")

[node name="YourLabel" type="Label" parent="North Wall/Container"]
layout_mode = 2
text = "You"
label_settings = SubResource("LabelSettings_r5jxv")

[node name="YourUnits" parent="North Wall/Container" instance=ExtResource("4_0gb48")]
layout_mode = 2

[node name="EnemyLabel" type="Label" parent="North Wall/Container"]
layout_mode = 2
text = "Enemy"
label_settings = SubResource("LabelSettings_r5jxv")

[node name="EnemyUnits" parent="North Wall/Container" instance=ExtResource("4_0gb48")]
layout_mode = 2
consume_available = false

[node name="HSeparator" type="HSeparator" parent="North Wall/Container"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="RunButton" type="Button" parent="North Wall/Container"]
layout_mode = 2
text = "Roll Combat"

[node name="Results" type="RichTextLabel" parent="North Wall/Container"]
clip_contents = false
layout_mode = 2
size_flags_vertical = 3
text = "You Rolled 6 (d6), 5 (d6), 3 (d4)
Enemy Rolled 5 (d6), 5 (d8), 4 (d6)
You lose 1d4
Enemy loses 1d6
Enemy deals X damage"
scroll_active = false
